--- a/Modus/index.html
+++ b/Modus/index.html
@@ -1,110 +1,123 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Modus - Single Page Portfolio Theme</title>
+    <link rel="stylesheet" href="css/style.css">
     <style>
-        *{
-            margin: 0px 0px;
-            padding: 0px 0px;
-            height: 100%;
-        }
-        nav{
-            position: fixed;
-            width: 100%;
-            height: 90px;
-            margin-bottom: 90px;
-            border-bottom: solid 1px #e7e7e7;
-            background-color: white;
-            z-index: 100;
-        }
-        .center{
-            max-width: 1140px;
-            min-width: 770px;
-            height: 90px;
-            padding-right: 15px;
-            padding-left: 15px;
-            margin: 0px auto;
-        }
-        .center a img{
-            height: 44px;
-        }
-        .img{
-            display: inline-block;
-            padding: 23px;
-            margin-left: 0px;
-            height: 44px;
-        }
-        ul{
-            height: 90px;
-            display: inline-block;
-            margin: 0px;
-            float: right;
-        }
-        li{
-            display: inline-block;
-        }
-        .link{
-            display: inline-block;
-            height: 20px;
-            padding: 35px 23px;
-            text-decoration: none;
-            color: #707070;
-            line-height: 20px;
-            font-size: 13px;
-        }
-        .link:hover{
-            color: #00c7fc;
-        }
-        .active{
-            color: #00c7fc;
-        }
-        em{
-            display: block;
-            width: 100%;
-            height: 725px;
-            background: rgba(0,0,0,0.8);
-            position: absolute;
-            top: 0px;
-        }
-        .header{
-            width: 100%;
-            height: 725px;
-        }
-        .head{
-            position: relative;
-        }
-        .container{
-            min-width: 720px;
-            max-width: 1140px;
-            height: 284px;
-            border: solid 1px black;
-        }
+
     </style>
 </head>
 <body>
     <nav>
         <div class="center">
-            <a class="img" href="#"><img src="http://demo.cssmoban.com/cssthemes4/gbts_6_modus/img/logo.png"></a>
+            <a class="img" href="#home"><img src="http://demo.cssmoban.com/cssthemes4/gbts_6_modus/img/logo.png"></a>
             <ul class="dh">
-                <li><a href="#" class="link active">HOME</a></li><li><a href="#" class="link a">PORTFOLIO</a></li><li><a href="#" class="link a">SERVICES</a></li><li><a href="#" class="link a">CLIENTS</a></li><li><a href="#" class="link a">CONTACT</a></li>
+                <li><a href="#home" class="link active">HOME</a></li><li><a href="#" class="link a">PORTFOLIO</a></li><li><a href="#" class="link a">SERVICES</a></li><li><a href="#" class="link a">CLIENTS</a></li><li><a href="#" class="link a">CONTACT</a></li>
             </ul>
         </div>
     </nav>
-    <div style="height: 180px"></div>
+    <div style="height: 90px" id="home"></div>
     <div class="head">
-        <img class="header" src="http://demo.cssmoban.com/cssthemes4/gbts_6_modus/img/header.jpg">
-        <em></em>
-    </div>
-    <div class="home-content">
-        <div class="container">
-            <span class="h5">Design / Development / Photography</span>
-            <h1 class="h1">Creativity have new level</h1>
-            <div class="home-button">
-                <a href="#">PREVIEW</a>
-                <a href="#">GET THEME</a>
+        <div class="home-content">
+            <div class="container">
+                <span class="h5">Design / Development / Photography</span>
+                <h1 class="h1">Creativity have new level</h1>
+                <div class="home-button">
+                    <a href="#"><span>PREVIEW</span></a>
+                    <a href="#" class="blue"><span>GET THEME</span></a>
+                </div>
+            </div>
+            <div class="arrow">
+                <a href="#">
+                    <img src="http://demo.cssmoban.com/cssthemes4/gbts_6_modus/img/svg/down_icon.svg">
+                </a>
             </div>
         </div>
+        <em></em>
     </div>
+    <section class="littleHistory">
+        <div class="block">
+            <h2>Little history</h2>
+            <span></span>
+            <p>Vivamus suscipit tortor eget felis porttitor volutpat. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui.
+            <br>Pellentesque in ipsum id orci porta dapibus. Proin eget tortor risus. Curabitur aliquet quam id dui posuere blandit.
+            <br>Donec rutrum congue leo eget malesuada. Vivamus suscipit tortor eget felis porttitor volutpat.
+            <br>Vivamus suscipit tortor eget felis porttitor volutpat. Cras ultricies ligula sed magna dictum porta.
+            <br>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+    </section>
+    <section class="lunbo">
+        <div class="block"></div>
+    </section>
+    <section class="services">
+        <div class="block">
+            <div class="box idea">
+                <span class="pic"><img src="http://demo.cssmoban.com/cssthemes4/gbts_6_modus/img/svg/services/idea.svg"></span>
+                <span class="line"></span>
+                <h5>idea</h5>
+                <p>Vivamus suscipit tortor eget felis porttitor
+                    volutpat. Vestibulum ac diam sit amet
+                    quam vehicula elementum sed sit amet dui.
+                    Pellentesque in ipsum id orci. </p>
+            </div>
+            <div class="box work">
+                <span class="pic"><img src="http://demo.cssmoban.com/cssthemes4/gbts_6_modus/img/svg/services/work.svg"></span>
+                <span class="line"></span>
+                <h5>work</h5>
+                <p>Vivamus suscipit tortor eget felis porttitor
+                    volutpat. Vestibulum ac diam sit amet
+                    quam vehicula elementum sed sit amet dui.
+                    Pellentesque in ipsum id orci. </p>
+            </div>
+            <div class="box deliver">
+                <span class="pic"><img src="http://demo.cssmoban.com/cssthemes4/gbts_6_modus/img/svg/services/deliver.svg"></span>
+                <span class="line"></span>
+                <h5>deliver</h5>
+                <p>Vivamus suscipit tortor eget felis porttitor
+                    volutpat. Vestibulum ac diam sit amet
+                    quam vehicula elementum sed sit amet dui.
+                    Pellentesque in ipsum id orci. </p>
+            </div>
+        </div>
+    </section>
+    <section class="clients">
+        <div class="block">
+            <div class="text">
+                <h2>our clients are</h2>
+                <span></span>
+                <p>“Vivamus suscipit tortor eget felis porttitor volutpat. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet<br> dui.
+                    Pellentesque in ipsum id orci porta dapibus. Proin eget tortor risus. Curabitur aliquet quam id dui posuere blandit”</p>
+            </div>
+            <div class="pic">
+                <div class="tu one"></div>
+                <div class="tu two"></div>
+                <div class="tu three"></div>
+                <div class="tu four"></div>
+            </div>
+        </div>
+    </section>
+    <section class="contect">
+        <div class="block">
+            <div class="about">
+                <h4>about us</h4>
+                <span class="line"></span>
+                <p>
+                    Vivamus suscipit tortor eget felis porttitor volutpat. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Pellentesque in ipsum id orci porta dapibus. Proin eget tortor risus. Curabitur aliquet quam id dui posuere blandit. Donec rutrum congue leo eget malesuada. Vivamus suscipit tortor eget felis porttitor volutpat. Vivamus suscipit tortor eget felis.
+                </p>
+            </div>
+            <div class="us">
+                <h4>about us</h4>
+                <span>email</span><br>
+                <input type="text"><br>
+                <span>message</span><br>
+                <textarea rows="2"></textarea><br>
+                <button>send</button>
+            </div>
+        </div>
+    </section>
+    <footer>
+
+    </footer>
 </body>
 </html>
