--- a/Modus/index.html
+++ b/Modus/index.html
@@ -1,6 +1,5 @@
-<<<<<<< HEAD
-<!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+!DOCTYPE html>
+<html lang="en>
 <head>
     <meta charset="UTF-8">
     <title>Modus - Single Page Portfolio Theme</title>
