--- a/Modus/index.html
+++ b/Modus/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en>
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Modus - Single Page Portfolio Theme</title>
@@ -171,5 +171,5 @@
             $('html,body').animate({scrollTop: $('#contact').offset().top}, 1000);
         });
     </script>
-</body
+</body>
 </html>
